изменил метод process(LinkedList<? extends Object> peoples)